Отображение истории профиля в таблице и плашках

--- a/Frontend/html/profile.html
+++ b/Frontend/html/profile.html
@@ -63,7 +63,7 @@
 
               <div class="col-12 col-md-4">
                 <h3>Профессионал</h3>
-                <div class="achievment-block not-reached row" id="1dan">
+                <div class="achievment-block not-reached row visually-hidden" id="11">
                   <div class="achievment-name col-3">
                     1 дан
                   </div>
@@ -72,7 +72,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="2dan">
+                <div class="achievment-block not-reached row visually-hidden" id="12">
                   <div class="achievment-name col-3">
                     2 дан
                   </div>
@@ -81,7 +81,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="3dan">
+                <div class="achievment-block not-reached row visually-hidden" id="13">
                   <div class="achievment-name col-3">
                     3 дан
                   </div>
@@ -90,9 +90,54 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="4dan">
+                <div class="achievment-block not-reached row visually-hidden" id="14">
                   <div class="achievment-name col-3">
                     4 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row visually-hidden" id="15">
+                  <div class="achievment-name col-3">
+                    5 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row visually-hidden" id="16">
+                  <div class="achievment-name col-3">
+                    6 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row visually-hidden" id="17">
+                  <div class="achievment-name col-3">
+                    7 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row visually-hidden" id="18">
+                  <div class="achievment-name col-3">
+                    8 дан
+                  </div>
+                  <div class="achievment-info col-9">
+                    <p name="name">Нет в базе</p>
+                    <p name ="date">Не определено</p>
+                  </div>
+                </div>
+                <div class="achievment-block not-reached row visually-hidden" id="19">
+                  <div class="achievment-name col-3">
+                    9 дан
                   </div>
                   <div class="achievment-info col-9">
                     <p name="name">Нет в базе</p>
@@ -104,7 +149,7 @@
 
               <div class="col-12 col-md-4">
                 <h3>Взрослый уровень</h3>
-                <div class="achievment-block not-reached row" id="1ku">
+                <div class="achievment-block not-reached row visually-hidden" id="1">
                   <div class="achievment-name ku-1 col-3">
                     1 кю
                   </div>
@@ -113,7 +158,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="2ku">
+                <div class="achievment-block not-reached row visually-hidden" id="2">
                   <div class="achievment-name ku-2 col-3">
                     2 кю
                   </div>
@@ -122,7 +167,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="3ku">
+                <div class="achievment-block not-reached row visually-hidden" id="3">
                   <div class="achievment-name ku-3 col-3">
                     3 кю
                   </div>
@@ -131,7 +176,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="4ku">
+                <div class="achievment-block not-reached row visually-hidden" id="4">
                   <div class="achievment-name ku-4 col-3">
                     4 кю
                   </div>
@@ -140,7 +185,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="5ku">
+                <div class="achievment-block not-reached row visually-hidden" id="5">
                   <div class="achievment-name ku-5 col-3">
                     5 кю
                   </div>
@@ -153,7 +198,7 @@
 
               <div class="col-12 col-md-4">
                 <h3>Детский уровень</h3>
-                <div class="achievment-block not-reached row" id="1ku-child">
+                <div class="achievment-block not-reached row visually-hidden" id="1-child">
                   <div class="achievment-name ku-1 col-3">
                     1 кю
                   </div>
@@ -162,7 +207,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="2ku-child">
+                <div class="achievment-block not-reached row visually-hidden" id="2-child">
                   <div class="achievment-name ku-2 col-3">
                     2 кю
                   </div>
@@ -171,7 +216,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="3ku-child">
+                <div class="achievment-block not-reached row visually-hidden" id="3-child">
                   <div class="achievment-name ku-3 col-3">
                     3 кю
                   </div>
@@ -180,7 +225,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="4ku-child">
+                <div class="achievment-block not-reached row visually-hidden" id="4-child">
                   <div class="achievment-name ku-4 col-3">
                     4 кю
                   </div>
@@ -189,7 +234,7 @@
                     <p name ="date">Не определено</p>
                   </div>
                 </div>
-                <div class="achievment-block not-reached row" id="5ku-child">
+                <div class="achievment-block not-reached row visually-hidden" id="5-child">
                   <div class="achievment-name ku-5 col-3">
                     5 кю
                   </div>
@@ -212,96 +257,7 @@
                   <td class="heading unvisible bordered">Ответственный клуб</td>
                   <td  class="heading">Результат</td>
                 </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
+
                 <!-- Here wil be new rows with info about seminar. It's add with JS. -->
               </table>
             </div>
@@ -314,100 +270,11 @@
               <table id="seminar-table">
                 <tr id="seminar-header">
                   <td class="heading">Дата</td>
+                  <td class="heading unvisible bordered">Название</td>
                   <td class="heading unvisible bordered">Город</td>
-                  <td class="heading unvisible bordered">Ответственный клуб</td>
                   <td  class="heading">Результат</td>
                 </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
-                <tr>
-                  <td class="">12.12.2012</td>
-                  <td class="unvisible bordered">Екатеринбург</td>
-                  <td class="unvisible bordered">Клуба мана</td>
-                  <td  class="">Сдано</td>
-                </tr>
+
                 <!-- Here wil be new rows with info about seminar. It's add with JS. -->
               </table>
             </div>
@@ -417,6 +284,7 @@
       </div>
   </body>
   <script src="../js/menu-inserting.js"></script>
+  <script src="../js/getRequest.js"></script>
   <script src = "../js/profile.js"></script>
   <script src="../js/set-status-ability-to-menu.js"></script>
 
