Переделан общий список меро

--- a/Frontend/html/upcoming_events.html
+++ b/Frontend/html/upcoming_events.html
@@ -4,32 +4,31 @@
     <meta charset="UTF-8">
     <title>Ближайшие мероприятия федерации</title>
     <link rel="stylesheet" href="../css/menu-style.css">
-    <link rel="stylesheet" href="../css/upcoming-events-style.css">
+    <link rel="stylesheet" href="../css/clubs-style.css">
 </head>
 <body>
-    <div class="content">
-        <br>
-        <h1 class="title">Ближайшие мероприятия федерации</h1>
-        <div class="card bordered">
-           <div class="ev-ic"> <img src="../assets/logo_federation.png" class="event-icons"></div>
-            <div class="inf-list">
-                <p class="event-name">Х центральный семинар по прикладному айкидо</p>
-                <p class="event-dates">17 - 19 декабря 2021 г.</p>
-                <p class="event-area">г.Екатеринбург</p>
-                <button type="button" class="more_details" name="more_details">Подробнее</button>
-            </div>
-        </div>
-        <div class="card bordered">
-            <div class="ev-ic"> <img src="../assets/photo.png" class="event-icons"></div>
-            <div class="inf-list">
-                <p class="event-name">Х центральный семинар по прикладному айкидо</p>
-                <p class="event-dates">17 - 19 декабря 2021 г.</p>
-                <p class="event-area">г.Екатеринбург</p>
-                <button type="button" class="more_details" name="more_details">Подробнее</button>
-            </div>
+    <div class="wrapper">
+
+        <div class="content">
+            <br>
+            <h1 class="title">Ближайшие мероприятия федерации</h1>
+<!--            <a class="card-link" href="#">-->
+<!--                <div class="bordered-container card">-->
+<!--                    <div class="ro">-->
+<!--                        <img src="../assets/clubs_logo/Praim.png">-->
+<!--                        <div class="inf-list">-->
+<!--                            <p class="club_name">Х центральный семинар по прикладному айкидо</p>-->
+<!--                            <p class="date">3 - 5 мая 2022 г.</p>-->
+<!--                            <p class="city">г.Екатеринбург</p>-->
+<!--                            <button type="button" class="moreBut" name="edit">Подробнее</button>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </a>-->
         </div>
     </div>
 </body>
+<script src="../js/getRequest.js"></script>
 <script src="../js/upcoming-events.js"></script>
 <script src="../js/menu-inserting.js"></script>
 </html>
